@@ -1,6 +1,8 @@
 package com.bookreum.dev.domain.club.controller;
 
+import java.util.Comparator;
 import java.util.List;
+
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -15,7 +17,6 @@ import com.bookreum.dev.domain.user.UserRepository;
 
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotNull;
-import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.RequiredArgsConstructor;
 
@@ -31,18 +32,12 @@ public class ClubApplicationController {
     private final ClubService clubService;
     private final UserRepository userRepository;
 
-    /**
-     * 신청 요청 DTO
-     */
     @Data
     static class ApplicationRequest {
         @NotNull(message = "User ID는 필수입니다.")
         private Integer userId;
     }
 
-    /**
-     * 신청 취소 요청 DTO
-     */
     @Data
     static class CancelRequest {
         @NotNull(message = "User ID는 필수입니다.")
@@ -50,72 +45,73 @@ public class ClubApplicationController {
     }
 
     /**
-     * 사용자 클럽 신청
-     * @param clubId 모임 ID
-     * @param request 신청 요청 DTO
-     * @return 생성된 신청 DTO와 HTTP 201
+     * 모임에 사용자 신청
      */
     @PostMapping
     public ResponseEntity<ClubApplicationDTO> apply(
-            @PathVariable("clubId") Integer clubId,
+    		@PathVariable("clubId") Integer clubId,
             @RequestBody @Valid ApplicationRequest request
     ) {
         ClubEntity club = clubService.getClub(clubId);
         UserEntity user = userRepository.findById(request.getUserId())
-                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 사용자 ID: " + request.getUserId()));
+            .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 사용자 ID: " + request.getUserId()));
+
         ClubApplicationEntity app = applicationService.applyToClub(club, user);
         return ResponseEntity.status(HttpStatus.CREATED)
-                .body(ClubApplicationDTO.fromEntity(app));
+                             .body(ClubApplicationDTO.fromEntity(app));
     }
 
     /**
-     * 사용자 클럽 신청 취소
-     * @param clubId 모임 ID
-     * @param request 취소 요청 DTO
-     * @return HTTP 204
+     * 모임 신청 취소
      */
     @DeleteMapping
     public ResponseEntity<Void> cancel(
-            @PathVariable("clubId") Integer clubId,
+    		@PathVariable("clubId") Integer clubId,
             @RequestBody @Valid CancelRequest request
     ) {
         ClubEntity club = clubService.getClub(clubId);
         UserEntity user = userRepository.findById(request.getUserId())
-                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 사용자 ID: " + request.getUserId()));
+            .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 사용자 ID: " + request.getUserId()));
+
         applicationService.cancelApplication(club, user);
         return ResponseEntity.noContent().build();
     }
 
     /**
-     * 특정 클럽의 신청 목록 조회
-     * @param clubId 모임 ID
-     * @return 신청 DTO 리스트
+     * 특정 모임의 신청 목록 조회
      */
     @GetMapping
     public ResponseEntity<List<ClubApplicationDTO>> listApplications(
-            @PathVariable("clubId") Integer clubId
+    		@PathVariable("clubId") Integer clubId
     ) {
+        // 1) ClubEntity 조회 (존재하지 않으면 400/404 예외 발생)
         ClubEntity club = clubService.getClub(clubId);
+
+        // 2) 신청 엔티티 → DTO 변환 후, appliedAt 기준 정렬
         List<ClubApplicationDTO> dtos = applicationService.getApplications(club).stream()
-                .map(ClubApplicationDTO::fromEntity)
-                .toList();
+            .map(ClubApplicationDTO::fromEntity)
+            .sorted(Comparator.comparing(ClubApplicationDTO::getAppliedAt))
+            .toList(); // Java 16+ 사용할 경우
+
+        // 만약 toList()가 안 되면 아래처럼 변경하세요:
+        //    .collect(Collectors.toList());
+
+        // 3) 결과 반환
         return ResponseEntity.ok(dtos);
     }
 
     /**
      * 사용자 신청 상태 확인
-     * @param clubId 모임 ID
-     * @param userId 사용자 ID
-     * @return 신청 여부 (true/false)
      */
     @GetMapping("/status")
     public ResponseEntity<Boolean> checkStatus(
-            @PathVariable("clubId") Integer clubId,
-            @RequestParam @NotNull Integer userId
+    		 @PathVariable("clubId") Integer clubId,
+    		 @RequestParam("userId") @NotNull Integer userId
     ) {
         ClubEntity club = clubService.getClub(clubId);
         UserEntity user = userRepository.findById(userId)
-                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 사용자 ID: " + userId));
+            .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 사용자 ID: " + userId));
+
         boolean applied = applicationService.isApplied(club, user);
         return ResponseEntity.ok(applied);
     }
